add-opens for Hive and Yarn to support Java 11+
Change-Id: Idcce017264a032d8aca34fb7051e3af20a1ea40e